--- a/index.html
+++ b/index.html
@@ -11,27 +11,29 @@
     <br>
     <table>
         <tr>
-          <th>Name</th>
-          <th>Score</th>
-          <th>Total</th>
+          <th>Dhara</th>
+          <th>Vis</th>
+          <th>San</th>
         </tr>
       <tbody>
         <tr>
-          <td>dhara</td>
           <td><input type="number" name="score" id="dhara" value="0"></td>
-          <td><input type="number" name="score" id="total1" value="0"></td>
+          <td><input type="number" name="score" id="vis" value="0"></td>
+          <td><input type="number" name="score" id="san" value="0"></td>
+        </tr> 
+      </tbody>
+      </table>
+      
+      <br>
+      <table>
+        <tr>
+          <th colspan="3">total</th>
         </tr>
         <tr>
-          <td>Vis</td>
-          <td><input type="number" name="score" id="vis" value="0"></td>
+          <td><input type="number" name="score" id="total1" value="0"></td>
           <td><input type="number" name="score" id="total2" value="0"></td>
-          </tr> 
-        <tr>
-          <td>San</td>
-          <td><input type="number" name="score" id="san" value="0"></td>
           <td><input type="number" name="score" id="total3" value="0"></td>
         </tr>
-        </tbody>
       </table>
       <script>
           const scoreUpdate1 = (event) => {
